<resources>
    <string name="app_name">mlkit_example</string>
    <string name="toast">Grant the permission to experience the function.</string>
    <string name="Information_permission">Obtaining related permissions: Camera permissions failed. Some functions cannot be used properly. You need to manually grant permissions on the settings page. </string>
    <string name="go_authorization">Go Authorization</string>
    <string name="title_activity_liveness_detection">LivenessDetectionActivity</string>
    <string name="sound_dect_start">Voice Recognition start</string>
    <string name="sound_dect_stop">Voice Recognition stop</string>
    <string name="sound_dect_error">Voice Recognition error:</string>

    <string name="destroied">SpeeechRecognizer has been destroyed</string>
    <string name="you_may_speak">You may speak now</string>

    <string name="online_synthesis">Online Mode</string>
    <string name="ondevice_synthesis">On-device Mode</string>
    <string name="permission_warn">Obtaining related permissions: Write permissions failed. Some functions cannot be used properly. You need to manually grant permissions on the settings page. </string>
    <string name="please_select_picture">Please select a picture to process~</string>
    <string name="text_service">Text-related Services</string>
    <string name="video_service">Language/Voice-related Services</string>
    <string name="image_service">Image-related Services</string>
    <string name="body_service">Face/Body-related Services</string>
    <string name="languagea_service">Natural Language Processing</string>
    <string name="custom">Custom Model</string>
    <string name="live_face">Live Face</string>
    <string name="image_face">Image Face</string>
    <string name="live_3dface">Live 3D Face</string>
    <string name="image_3dface">Image 3D Face</string>
    <string name="live_skeleton">Live Skeleton</string>
    <string name="image_skeleton">Image Skeleton</string>
    <string name="live_hand">Live Handkeypoint</string>
    <string name="image_hand">Image Handkeypoint</string>
    <string name="liveness">Liveness Dect</string>
    <string name="gesture_still">Gesture Still</string>
    <string name="gesture_live">Gesture Live</string>
    <string name="face_verification">Face Verification</string>
    <string name="text_embedding">TextEmbedding</string>
    <string name="text">Text</string>
    <string name="document">Document</string>
    <string name="icr">ID Card</string>
    <string name="icr_tips">Only front recognition is supported for photographing detection.</string>
    <string name="gcr">General Card</string>
    <string name="bcr">Bank Card</string>
    <string name="form">Form Recoginition</string>
    <string name="translate">Translate</string>
    <string name="aft">AFT</string>
    <string name="tts">TTS</string>
    <string name="asr">ASR</string>
    <string name="speechRtt">RealTimeTranscription</string>
    <string name="sound_dect_title">sound Dect</string>
    <string name="live_imgseg">Live Imgseg</string>
    <string name="image_imgseg">Image Imgseg</string>
    <string name="live_scene">Live Scene Dect</string>
    <string name="image_scene">Image Scene Dect</string>
    <string name="product_search">Product Search</string>
    <string name="object">Object</string>
    <string name="landmark">Landmark</string>
    <string name="classification">Classification</string>
    <string name="image_super">Image Super</string>
    <string name="text_super">Text Image Super</string>
    <string name="dect_skew">Document Skew Correction</string>
    <string name="image_hair">Hair Segmentation</string>
    <string name="teble_error">Failed to check the table. Change the table image.</string>
    <string name="icr_vn">ICR VN</string>
    <string name="custom_ui">Face Detection</string>
    <string name="custom_tips">Put your face in the frame.</string>

</resources>
