<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top_layout_imgseg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_imgseg_live"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/live_imgseg"
                android:textSize="13sp"></Button>

            <Button
                android:id="@+id/btn_imgseg_image"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/image_imgseg"
                android:textSize="13sp"></Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/top_layout_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_live_scene_detection"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/live_scene"
                android:textSize="13sp"></Button>

            <Button
                android:id="@+id/btn_image_scene_detection"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/image_scene"
                android:textSize="13sp"></Button>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/top_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_productvisionsearch"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/product_search"
                android:textSize="13sp"></Button>

            <Button
                android:id="@+id/btn_object"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/object"
                android:textSize="13sp"></Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/top_layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_landmark"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/landmark"
                android:textSize="13sp"></Button>

            <Button
                android:id="@+id/btn_classification"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/classification"
                android:textSize="13sp"></Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/top_layout_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_imageSuper_resolution"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/image_super"
                android:textSize="13sp"></Button>

            <Button
                android:id="@+id/btn_text_super_resolution"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/text_super"
                android:textSize="13sp"></Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/top_layout_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_documentSkewCorrection"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/dect_skew"
                android:textSize="13sp"></Button>

            <Button
                android:id="@+id/btn_imgseg_hair"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/image_hair"
                android:textSize="13sp"></Button>
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>