<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top_layout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_text"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/text"
                android:textSize="13sp"></Button>

            <Button
                android:id="@+id/btn_document"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/document"
                android:textSize="13sp"></Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/top_layout_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_icr"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/icr"
                android:textSize="13sp"></Button>

            <Button
                android:id="@+id/btn_gcr"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/gcr"
                android:textSize="13sp"></Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/top_layout_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_bcr"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/bcr"
                android:textSize="13sp"></Button>

            <Button
                android:id="@+id/btn_formRecoginition"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/form"
                android:textSize="13sp"></Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/top_layout_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_icr_vn"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/icr_vn"
                android:textSize="13sp"></Button>
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>