<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top_layout_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_translate"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/translate"
                android:textSize="13sp"></Button>
            <Button
                android:id="@+id/btn_aft"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/aft"
                android:textSize="13sp"></Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/top_layout_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_tts"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/tts"
                android:textSize="13sp"></Button>

            <Button
                android:id="@+id/btn_asr"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/asr"
                android:textSize="13sp"></Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/top_layout_audio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_speechrtt"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/speechRtt"
                android:textSize="13sp"></Button>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/top_layout_audio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">
        <Button
            android:id="@+id/btn_soundDect"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_weight="1"
            android:text="@string/sound_dect_title"
            android:textSize="13sp"></Button>
    </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>