<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChooseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top_layout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_text"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/text_service"
                android:textSize="13sp"></Button>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/top_layout_voice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_voice"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/video_service"
                android:textSize="13sp"></Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/top_layout_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_image"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/image_service"
                android:textSize="13sp"></Button>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/top_layout_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_body"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/body_service"
                android:textSize="13sp"></Button>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/top_layout_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_language"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/languagea_service"
                android:textSize="13sp"></Button>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/top_layout_custom_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_custom_model"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:text="@string/custom"
                android:textSize="13sp"></Button>

        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>